--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,6 @@ spring:
     password: nihao123
     url: jdbc:mysql://172.16.52.99:3306/yp?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai&rewriteBatchedStatements=true&allowMultiQueries=true
 
-#mybatis-plus:
-#  configuration:
-#    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
-
-logging:
-  config:
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
