--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>1.18.30</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.47</version>
+        </dependency>
+
     </dependencies>
 
     <build>
