--- a/pom.xml
+++ b/pom.xml
@@ -22,33 +22,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- mybatis plus-->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.5.5</version>
-
-            <exclusions>
-                <exclusion>
-                    <groupId>org.mybatis</groupId>
-                    <artifactId>mybatis-spring</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>3.0.3</version>
-        </dependency>
-
         <!-- mysql-->
         <dependency>
             <groupId>com.mysql</groupId>
@@ -57,20 +30,66 @@
             <version>8.3.0</version>
         </dependency>
 
+        <!--   阿里连接池    -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-3-starter</artifactId>
+            <version>1.2.22</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.22</version>
+        </dependency>
+
+        <!-- mybatis plus-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.5</version>
+
+            <!--排除mybatis 中引用的低版本依赖 使用下面的高版本-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mybatis</groupId>
+                    <artifactId>mybatis-spring</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- 使用新版本的mybatis-spring包 解决兼容性问题-->
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+        <!--  lombok 一些方便的注解  -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
         </dependency>
 
+        <!-- 阿里JSON序列化库 -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>2.0.47</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
+    <!--  构建配置-->
     <build>
         <plugins>
             <plugin>
@@ -82,15 +101,19 @@
     </build>
 
 
+    <!--  maven仓库信息 -->
     <repositories>
+        <!-- 使用阿里的镜像仓库-->
         <repository>
             <id>aliyunmaven</id>
             <name>阿里云镜像仓库</name>
             <url>https://maven.aliyun.com/repository/public</url>
             <snapshots>
+                <!-- 禁止使用测试版-->
                 <enabled>false</enabled>
             </snapshots>
             <releases>
+                <!-- 使用稳定版-->
                 <enabled>true</enabled>
             </releases>
         </repository>
